--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Videoconditioner by svofski</title>
 
-    <link rel="stylesheet" href="{{site.path}}/stylesheets/styles.css">
-    <link rel="stylesheet" href="{{site.path}}/stylesheets/github-light.css">
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
