--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -27,7 +27,9 @@
           <li><a href="https://github.com/svofski/videoconditioner">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
+<section>
 {{content}}
+</section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/svofski">svofski</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
